# lerobot-teleoperator-spacemouse

./: .gitignore  README.md  pyproject.toml
src/lerobot_teleoperator_spacemouse/: __init__.py  adapter.py  cli.py  config.py  patches.py  profiles.py  spacemouse.py
src/lerobot_teleoperator_spacemouse/urdfs/: so101_new_calib.urdf
tests/: test_adapter.py  test_spacemouse.py
