[build-system]
requires = ["setuptools>=71", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_teleoperator_spacemouse"
version = "0.1.1"
description = "SpaceMouse teleoperation plugin and Cartesian control adapters for LeRobot."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "Shunyu Yao" },
]
keywords = ["lerobot", "spacemouse", "3dconnexion", "teleoperation", "robotics", "soarm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "lerobot[feetech,kinematics]>=0.5.0",
    "numpy>=2.0.0,<2.3.0",
    "pyspacemouse>=1.1.5,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.0,<2.0.0",
    "pytest>=8.0.0,<9.0.0",
    "ruff>=0.6.0",
    "twine>=6.0.0,<7.0.0",
]

[project.urls]
homepage = "https://github.com/Jas000n/lerobot-teleoperator-spacemouse"
source = "https://github.com/Jas000n/lerobot-teleoperator-spacemouse"
issues = "https://github.com/Jas000n/lerobot-teleoperator-spacemouse/issues"

[project.scripts]
lerobot-teleoperator-spacemouse-test = "lerobot_teleoperator_spacemouse.cli:test_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lerobot_teleoperator_spacemouse = ["urdfs/*.urdf"]

[tool.ruff]
target-version = "py312"
line-length = 110

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]
